# Print-Farm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  caddyfile  caddyfile.rustfs  docker-compose.app.local.yaml  docker-compose.full.local.yaml  docker-compose.full.yaml  docker-compose.openbao.yaml  docker-compose.rustfs.yaml  docker-compose.yaml  my-bootstrap.config.json  next.config.ts  package-lock.json  package.json
app/: auth.ts  globals.css  layout.tsx  page.tsx
components/: Footer.tsx  Header.tsx  PaperArticle.tsx  PaperPdfEmbed.tsx  PdfViewer.tsx  SignInButton.tsx  VerticalNavBar.css  VerticalNavBartest.tsx
deploy/: app-vps.base.env.example
deployables/print-stage/orca-lan-wrapper/: CMakeLists.txt  README.md
deployables/print-stage/orca-lan-wrapper/src/: file_transfer_min.cpp  main.cpp
docs/: app-vps-bootstrap.md  infra-system-design.md
infra/: bootstrap-tools.Dockerfile
scripts/: bootstrap-app-vps.sh  bootstrap-hetzner-project.mjs  bootstrap-hetzner-project.ps1  bootstrap-hetzner-project.sh  bootstrap-print-vps.sh  configure-resend-openbao.mjs  configure-single-vps-routing.sh  deploy-app-vps.sh  deploy-rustfs-vps.sh  ensure-print-openbao-admin.mjs  fetch-openbao-secrets.mjs  full-stack-local-up-approle.ps1  full-stack-local-up.mjs  init-rustfs-bucket.mjs  live-print-stage-deploy.sh  live-route-fix.sh  live-runner-ssh-fix.sh  prepare-full-stack-env.mjs  prepare-github-actions-vps-deploy.ps1  prepare-print-env.mjs  provision-app-vps.sh  reset-local-openbao.ps1  secret-refresh-relay.mjs  seed-openbao-dev.mjs  setup-rustfs-vps.sh  (+8 more)
(+201 files in other folders)
